--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -74,3 +74,22 @@ hr{
 .sidenav-overlay {
     z-index: 996
 }
+
+
+
+.dropdown-content li>a, .dropdown-content li>span {
+    font-size: 18px;
+    color: white;
+    display: block;
+    line-height: 22px;
+    padding: 14px 16px;
+    background: #4fc3f7;
+    font-weight: bolder;
+    font-family: 'McLaren', cursive;
+}
+
+.select-label{
+    font-weight: bolder !important;
+    font-size: 1em !important;
+}
+
